# MeowNotes

./: .env.example  .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
.qoder/specs/: meow-notes-ai-client.md
css/: ai-panel.css  animations.css  base.css  cat.css  editor.css  filetree.css  glassmorphism.css  layout.css  sidebar.css  variables.css
js/: app.js  cat-animation.js  interactions.js  typewriter.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  app.rs  assets.rs  cat.rs  graph.rs  notes.rs
src-tauri/src/models/: ai.rs  app.rs  assets.rs  cat.rs  graph.rs  mod.rs  notes.rs
src-tauri/src/services/: ai.rs  app.rs  assets.rs  cat.rs  error.rs  graph.rs  mod.rs  notes.rs
src-tauri/src/storage/: file_storage.rs  mod.rs
src/components/editor/: EditorToolbar.tsx  MarkdownBlockEditor.tsx  MarkdownPreview.tsx  SlashCommandMenu.tsx  WikiLinkSuggest.tsx  index.ts
src/services/: tauriClient.ts
src/types/: models.ts
src/utils/: markdown.ts
