[package]
name = "meownotes"
version = "0.1.0"
description = "MeowNotes Windows desktop shell"
authors = ["MeowNotes"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "meownotes"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "meownotes"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
